--- a/bankdetails.html
+++ b/bankdetails.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-12 nav-link-new font-weight-bold">
                     <a href="sidebarpage.html"><i class="fa fa-bars mr-3"></i></a>
-                    Profile
+                    Bank Details
                 </div>
             </div>
         </div>
@@ -33,33 +33,21 @@
            <div class="row">
                <div class="col-md-12">
                    
-                   <form action=" " class="mt-3 ">
-                    <div class="preview-img text-center  " data-holder-rendered="true">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" alt="" class="rounded-circle z-depth-2 img-fluid " width="200">
-                    </div>
-                       <div class="form form-group mt-3">
-                          <input type="file" class="form-control input-box" >
+                   <form action=" " class="mt-5 ">
+                       <div class="form-group">
+                           <label for="" clas=""> Bank Name </label>
+                          <input type="text" class="form-control input-box" id="bname" placeholder="" name="bankname">
                        </div>
                        <div class="form-group">
-                           <label for="" clas=""> Name </label>
-                          <input type="text" class="form-control input-box" id="fname" placeholder="" name="fname">
-                       </div>
-                       <div class="form-group">
-                        <label for="" clas=""> Business Name </label>
+                        <label for="" clas=""> Swift Code </label>
                             <input type="text" class="form-control input-box" id="businessname" placeholder="" name="businessnamemail">
                        </div> 
                        <div class="form-group">
-                        <label for="" clas=""> Phone </label>
+                        <label for="" clas=""> Account Number </label>
                           <input type="text" class="form-control input-box" id="phone" placeholder="" name="Phone">
                        </div> 
-                       <div class="form-group">
-                        <label for="" clas=""> Email </label>
-                            <input type="email" class="form-control input-box" id="email" placeholder="" name="email">
-                       </div> 
+                       
                        </div>
-                       <!-- <div class="form-group">
-                           <input type="submit" class="form-control success-btn"  value="Register" placeholder="Sing in">
-                       </div> -->
                      <input type="submit" class="submit-btn form-control success-btn" value="Save" placeholder="Save">
                   </form>
                </div>
