--- a/sidebarpage.html
+++ b/sidebarpage.html
@@ -39,36 +39,34 @@
         </div>
     </div> 
     
-    <div class="container">
+    <div class="container"> 
         <div class="row">
            <div class="col-md-12">
             <div class=" " id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="dashboard.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
+                  <li class="nav-item mt-3 ">
+                    <a class="nav-link active " href="dashboard.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mt-3">
                       <a class="nav-link" href="profile.html"><i class="fas fa-user mr-3"></i> Profile <i class="fa fa-chevron-right float-right"></i></a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-bank mr-3"></i> Bank Details <i class="fa fa-chevron-right float-right"></i></a>
+                  <li class="nav-item mt-3">
+                      <a class="nav-link" href="bankdetails.html"><i class="fas fa-bank mr-3"></i> Bank Details <i class="fa fa-chevron-right float-right"></i></a>
                   </li> 
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-bank mr-3"></i> Bank Details <i class="fa fa-chevron-right float-right"></i></a>
+                   
+                  <li class="nav-item mt-3">
+                      <a class="nav-link" href="receivedamount.html"><i class="fas fa-money mr-3"></i> Received Amounts <i class="fa fa-chevron-right float-right"></i></a>
                   </li> 
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-money mr-3"></i> Received Amounts <i class="fa fa-chevron-right float-right"></i></a>
-                  </li> 
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-lock mr-3"></i> Change Password <i class="fa fa-chevron-right float-right"></i></a>
+                  <li class="nav-item mt-3">
+                      <a class="nav-link" href="changepassword.html"><i class="fas fa-key mr-3"></i> Change Password <i class="fa fa-chevron-right float-right"></i></a>
                   </li>    
-                  <!-- <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-shield-check"></i> Privacy and Security <i class="fa fa-chevron-right float-right"></i></a>
-                  </li>     -->
-                  <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-headphones mr-3"></i> Support <i class="fa fa-chevron-right float-right"></i></a>
+                  <li class="nav-item mt-3">
+                      <a class="nav-link" href="Privacy.html"><i class="fas fa-lock mr-3"></i> Privacy and Security <i class="fa fa-chevron-right float-right"></i></a>
+                  </li> 
+                  <li class="nav-item mt-3">
+                    <a class="nav-link" href="support.html"><i class="fas fa-headphones mr-3"></i> Support <i class="fa fa-chevron-right float-right"></i></a>
                 </li> 
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                     <a class="nav-link" href="#"><i class="fas fa-user mr-3"></i> Logout  <i class="fa fa-chevron-right float-right"></i></a>
                 </li> 
                 </ul>
