--- a/sidebarpage.html
+++ b/sidebarpage.html
@@ -45,7 +45,7 @@
             <div class=" " id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item mt-3 ">
-                    <a class="nav-link active " href="dashboard.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
+                    <a class="nav-link active " href="index.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
                   </li>
                   <li class="nav-item mt-3">
                       <a class="nav-link" href="profile.html"><i class="fas fa-user mr-3"></i> Profile <i class="fa fa-chevron-right float-right"></i></a>
