--- a/sidebarpage.html
+++ b/sidebarpage.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row nav-container">
                 <div class="col-md-12 nav-link text-white">
-                    <a href="dashboard.html"><i class="fa fa-arrow-left mr-3"></i></a>
+                    <a href="index.html"><i class="fa fa-arrow-left mr-3"></i></a>
                     Dashboard 
                 </div>
             </div>
@@ -35,8 +35,8 @@
                         <img src="images/qrcode.png" alt="" class="img-fluid">
                    </div>
                  </div>
-             </div>
-        </div>
+               </div>
+          </div>
     </div> 
     
     <div class="container"> 
