--- a/receivedamount.html
+++ b/receivedamount.html
@@ -15,11 +15,11 @@
 </head>
 <body>
     <!-- Navbar Section start-->
-    <div class="navbar-sec p-1">
-        <div class="container">
+    <div class="navbar-sec p-1 ">
+        <div class="container mt-2 mb-2">
             <div class="row">
                 <div class="col-md-12 nav-link-new font-weight-bold">
-                    <a href="sidebarpage.html"><i class="fa fa-bars mr-3"></i></a>
+                    <a href="sidebar.html"><i class="fa fa-arrow-left mr-3"></i></a>
                     Received Amount
                 </div>
             </div>
@@ -28,13 +28,74 @@
     <!-- Navbar Section start-->
 
     <!-- Content Section start -->
-      <div class="container">
+    <div class="container">
+        <div class="row text-center mt-5" >
+            <div class="col-md-12 mb-4">
+               <button class="received-money-button pt-1 pb-1 pr-3 pl-3">Receivd Transection</button>
+           </div>
+       </div>
+        <div class="row  pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+           <div class="col-sm-12">
+              <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+              <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+           </div>
+           <div class="col-sm-12">
+             <p class="float-left">ABC Company</p>
+          </div>
+          <div class="col-sm-12">
+             <p class="float-left">03-09-2021 | 11:10 AM</p>
+             <p class="text-right" >+91 8579213649</p>    
+          </div>
+        </div>
+   
+        <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+           <div class="col-sm-12">
+             <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+             <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+           </div>
+           <div class="col-sm-12">
+             <p class="float-left">ABC Company</p>
+          </div>
+          <div class="col-sm-12">
+            <p class="float-left">03-09-2021 | 11:10 AM</p>
+            <p class="text-right" >+91 8579213649</p>    
+          </div>
+         </div>
+   
+         <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+           <div class="col-sm-12">
+             <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+             <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+           </div>
+           <div class="col-sm-12">
+             <p class="float-left">ABC Company</p>
+          </div>
+          <div class="col-sm-12">
+            <p class="float-left">03-09-2021 | 11:10 AM</p>
+            <p class="text-right" >+91 8579213649</p>    
+          </div>
+         </div>
+         <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+           <div class="col-sm-12">
+             <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+             <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+           </div>
+           <div class="col-sm-12">
+             <p class="float-left">ABC Company</p>
+          </div>
+          <div class="col-sm-12">
+            <p class="float-left">03-09-2021 | 11:10 AM</p>
+            <p class="text-right" >+91 8579213649</p>    
+          </div>
+         </div>
+      </div>
+      <!-- <div class="container">
          <div class="row text-center">
             <div class="col-md-12 ">
                  <button class="btn btn-secondary show-button">Nothing to show</button>
             </div>
          </div>
-      </div>
+      </div> -->
     <!-- Content Section End -->
 </body>
 </html>
