--- a/index.html
+++ b/index.html
@@ -9,46 +9,35 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <div class="navbar-sec p-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 nav-link-new font-weight-bold">
-                    <a href="sidebarpage.html"><i class="fa fa-bars mr-3"></i></a>
-                    Dashboard
-                </div>
-            </div>
-        </div>
-    </div>  
     
-    
-    <!-- Wallet Section Start  -->
-       <div class="container">
+   <div class="banner" >
+      <div class="container">
           <div class="row">
-             <div class='col-md-12'>
-                 <div class="wallet-card text-white mt-3 text-center pb-5">
-                    <p class="pt-3 pb-5 ">Wallet</p>
-                    <h6>Error OMR</h6>
-                 </div>
-             </div>
+              <div class="col-md-12 text-center logo-column">
+                   <img src="images/logo.svg" alt="">
+              </div>
           </div>
-          <div class="row text-center mt-5" >
-               <div class="col-md-12">
-                   <button class="received-money-button pt-1 pb-1 pr-3 pl-3">Receivd Transection</button>
-               </div>
+      </div>
+   </div> 
+   <div class="container forn-container " > 
+       <form action="sidebar.html" class="form-sec p-3 mt-3">
+           <h4 class="text-center mb-4">SIGN IN</h4>
+           <div class="form-group">
+               <input type="email" class="form-control input-box" id="email" placeholder="Email" name="email">
           </div>
-          <div class="row text-center mt-5">
-             <div class="col-md-12">
-                <img src="images/sorry.png" alt="" class="img-fluid">
-                <h5>We're sorry</h5>
-                <p>But there's no result :(</p>
-             </div>
+          <div class="form-group">
+               <input type="password" class="form-control input-box" id="pwd" placeholder="Password" name="pswd">
+          </div> 
+          <div class="form-group">
+              <input type="submit" class="form-control success-btn"  value="Sign in" placeholder="Sing in">
           </div>
-       </div>
-    <!-- Wallet Section End -->
+          <p class="text-center mb-4 mt-5  forgot-sec"><a href="forgotpassword.html">Forgot Password ?</a></p>
+          <div class="signup-btn text-center">
+              <button class="btn btn-link"><a href="signup.html">Sign Up</a></button>
+          </div>
+       </form>
+   </div>
 </body>
 </html>
