--- a/sidebar.html
+++ b/sidebar.html
@@ -126,7 +126,7 @@ body {
                 <div class=" " id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item mt-3 ">
-                        <a class="nav-link active " href="index.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
+                        <a class="nav-link active " href="sidebar.html"><i class="fas fa-home mr-3"></i> Dashboard <i class="fa fa-chevron-right float-right"></i></a>
                       </li>
                       <li class="nav-item mt-3">
                           <a class="nav-link" href="profile.html"><i class="fas fa-user mr-3"></i> Profile <i class="fa fa-chevron-right float-right"></i></a>
@@ -186,11 +186,11 @@ body {
                       </div>
                   </div>
                   <div class="row text-center mt-5">
-                       <div class="col-md-12">
+                       <!-- <div class="col-md-12">
                             <img src="images/sorry.png" alt="" class="img-fluid">
                             <h5>We're sorry</h5>
                             <p>But there's no result :(</p>
-                       </div>
+                       </div> -->
                  </div>
                 </div>
                 <!-- Wallet Section End -->
@@ -198,27 +198,79 @@ body {
             <!-- </div>
         </div>
     </div> -->
-    <div class="container">
-        <div class="row" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
-            <div class="col-md-6 m-2">
-              <!-- <i class="fa fa-check-circle fa-lg"></i> Received abc -->
-              <div class="card">
-                <div class="card-horizontal">
-                    <div class="img-square-wrapper">
-                        <!-- <img class="img-fluid" src="http://via.placeholder.com/300x180" alt="Card image cap"> -->
-                        <i class="fa fa-check-circle fa-lg"></i> 
-                    </div>
-                    <div class="card-body">
-                        <!-- <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-                    </div> 
-                </div>
-            </div>
-           </div> 
 
-           
+   <!-- <div class="container">
+     <div class="row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+        <div class="col-md-12">
+          <h6><span><i class='fa fa-check-circle fa-lg'>Received to </i></span><span style="margin-left: 48%; font-weight: bold; font-size: 23px;">$312</span></h6>
         </div>
-    </div>
+        <div class="col-md-12">
+          <h6><span>ABC company </span><span style="margin-left: 43%; font-weight: bold; font-size: 23px;"></span></h6>
+        </div>
+        <div class="col-md-12 mt-2">
+          <h6><span>03-09-2021 | 10:51 AM</span><span style="margin-left: 18%; ">+91 8572844681</span></h6>
+        </div>
+     </div>
+   </div> -->
+
+   <div class="container">
+     <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+        <div class="col-sm-12">
+           <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+           <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+        </div>
+        <div class="col-sm-12">
+          <p class="float-left">ABC Company</p>
+       </div>
+       <div class="col-sm-12">
+          <p class="float-left">03-09-2021 | 11:10 AM</p>
+          <p class="text-right" >+91 8579213649</p>    
+       </div>
+     </div>
+
+     <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+        <div class="col-sm-12">
+          <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+          <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+        </div>
+        <div class="col-sm-12">
+          <p class="float-left">ABC Company</p>
+       </div>
+       <div class="col-sm-12">
+         <p class="float-left">03-09-2021 | 11:10 AM</p>
+         <p class="text-right" >+91 8579213649</p>    
+       </div>
+      </div>
+
+      <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+        <div class="col-sm-12">
+          <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+          <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+        </div>
+        <div class="col-sm-12">
+          <p class="float-left">ABC Company</p>
+       </div>
+       <div class="col-sm-12">
+         <p class="float-left">03-09-2021 | 11:10 AM</p>
+         <p class="text-right" >+91 8579213649</p>    
+       </div>
+      </div>
+      <div class="row row pt-3 pb-3 mt-3" style="box-shadow: 1px 1px 40px 4px #bdc1c6;">
+        <div class="col-sm-12">
+          <p class="float-left"><i class='fa fa-check-circle fa-lg'> Received to </i></p>
+          <p class="text-right" style=" font-weight: bold; font-size: 23px;">$312</p>    
+        </div>
+        <div class="col-sm-12">
+          <p class="float-left">ABC Company</p>
+       </div>
+       <div class="col-sm-12">
+         <p class="float-left">03-09-2021 | 11:10 AM</p>
+         <p class="text-right" >+91 8579213649</p>    
+       </div>
+      </div>
+   </div>
+
+
 </div> 
 </body>
 </html> 
