--- a/signup.html
+++ b/signup.html
@@ -15,10 +15,10 @@
 <body>
     
     <div class="nav">
-        <div class="container">
+        <div class="container mt-2 mb-2">
             <div class="row">
                 <div class="col-md-12 nav-link text-white">
-                    <a href="login.html"><i class="fa fa-arrow-left mr-3"></i></a>
+                    <a href="index.html"><i class="fa fa-arrow-left mr-3"></i></a>
                     Sign In 
                 </div>
             </div>
