--- a/support.html
+++ b/support.html
@@ -16,10 +16,10 @@
 <body>
     <!-- Navbar Section start-->
     <div class="navbar-sec p-1">
-        <div class="container">
+        <div class="container mt-2 mb-2">
             <div class="row">
                 <div class="col-md-12 nav-link-new font-weight-bold">
-                    <a href="sidebarpage.html"><i class="fa fa-bars mr-3"></i></a>
+                    <a href="sidebar.html"><i class="fa fa-arrow-left mr-3"></i></a>
                     Support
                 </div>
             </div>
