--- a/sidebar.html
+++ b/sidebar.html
@@ -182,7 +182,7 @@ body {
                        </div>
                        <div class="row text-center mt-5" >
                        <div class="col-md-12">
-                          <button class="received-money-button pt-1 pb-1 pr-3 pl-3">Receivd Transection</button>
+                          <button class="received-money-button pt-1 pb-1 pr-3 pl-3">Received Transection</button>
                       </div>
                   </div>
                   <div class="row text-center mt-5">
