--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-md-12 nav-link text-white">
                     <a href="index.html"><i class="fa fa-arrow-left mr-3"></i></a>
-                    Sign In 
+                    Sign Up
                 </div>
             </div>
         </div>
