--- a/support.html
+++ b/support.html
@@ -81,7 +81,7 @@
            <div class="row">
               <div class="col-md-12">
                 <hr style="background-color: #cc4521; width: 100%; " class="float-left">
-                <p class="text-center">@Copyright PayOman , Design And Develeope By <span style="color: #18c085;">Codesoftic Tech PVT LTD.</span></p>
+                <p class="text-center">@Copyright PayOman , Design And Develeope By <span style="color: #cc4521;">Codesoftic Tech PVT LTD.</span></p>
               </div>
            </div>
         
