--- a/Privacy.html
+++ b/Privacy.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-12 nav-link-new font-weight-bold">
                     <a href="sidebar.html"><i class="fa fa-arrow-left mr-3"></i></a>
-                    Support
+                    Privacy and Security
                 </div>
             </div>
         </div>
